# frida-gum

./: .bzrignore  .cirrus.yml  .clang-format  .clang-format-ignore  .clang-format-include  .gitignore  .gitmodules  AUTHORS  CLAUDE.md  COPYING  Makefile  Makefile.am  README.md  autogen.sh  config.h.in  config.h.meson  configure  configure.ac  configure.bat  frida-gum-1.0.pc.in  frida-gumjs-1.0.pc.in  frida-gumpp-1.0.pc.in  frida-tvos.h  gum-1.0.pc.in  gum-32.vcxproj  gum-32.vcxproj.filters  gum-64.vcxproj  gum-64.vcxproj.filters  gum-common.props  gumpp-1.0.pc.in  make.bat  meson.build  meson.options  meson_options.txt  wscript
bindings/gumjs/: Makefile.am  duk_config.h  duktape.c  duktape.h  frida-babel-polyfill.js  generate-bindings.py  generate-runtime.py  gumansi.c  gumansi.h  gumcmodule.c  gumcmodule.h  gumdukapiresolver.c  gumdukapiresolver.h  gumdukbundle.c  gumdukbundle.h  gumdukcmodule.c  gumdukcmodule.h  gumdukcoderelocator.c  gumdukcoderelocator.h  gumdukcodewriter.c  gumdukcodewriter.h  gumdukcompat.c  gumdukcompat.h  gumdukcompile.c  gumdukcore.c  gumdukcore.h  gumdukdatabase.c  gumdukdatabase.h  gumdukeventsink.c  gumdukeventsink.h  gumdukfile.c  gumdukfile.h  gumdukglue.c  gumdukinstruction.c  gumdukinstruction.h  gumdukinterceptor.c  gumdukinterceptor.h  gumdukkernel.c  gumdukkernel.h  gumdukmacros.h  (+314 more)
bindings/gumpp/: Makefile.am  backtracer.cpp  gumpp-common.props  gumpp-static.filters  gumpp-static.vcxproj  gumpp-static.vcxproj.filters  gumpp.def  gumpp.hpp  gumpp.symbols  gumpp.vcxproj  gumpp.vcxproj.filters  gumpp.version  interceptor.cpp  invocationcontext.hpp  invocationlistener.cpp  invocationlistener.hpp  meson.build  objectwrapper.hpp  podwrapper.hpp  profiler.cpp  returnaddress.cpp  runtime.cpp  runtime.hpp  sampler.cpp  sanitychecker.cpp  string.hpp  symbolutil.cpp
ext/dbghelp/: dbghelp.h  meson.build
ext/symsrv/: meson.build
gum/: Makefile.am  dlmalloc.c  generate-script-runtime.py  generate-script-runtime.sh  gum-init.h  gum.c  gum.h  gumapiresolver.c  gumapiresolver.h  gumarray.c  gumarray.h  gumbacktracer.c  gumbacktracer.h  gumcloak-priv.h  gumcloak.c  gumcloak.h  gumclosure.h  gumcodeallocator.c  gumcodeallocator.h  gumcodesegment.c  gumcodesegment.h  gumcontrolflowgraph.c  gumcontrolflowgraph.h  gumdarwingrafter-priv.h  gumdarwingrafter.c  gumdarwingrafter.h  gumdarwinmodule-priv.h  gumdarwinmodule.c  gumdarwinmodule.h  gumdefs.h  gumelfmodule-priv.h  gumelfmodule.c  gumelfmodule.h  gumenumtypes.c.template  gumenumtypes.h.template  gumevent.h  gumeventsink.c  gumeventsink.h  gumexceptor.c  gumexceptor.h  (+120 more)
gum/arch-arm/: 1.txt  2.txt  gumarm.h  gumarmbacktracer.c  gumarmbacktracer.h  gumarmreader.c  gumarmreader.h  gumarmreg.c  gumarmreg.h  gumarmrelocator.c  gumarmrelocator.h  gumarmwriter.c  gumarmwriter.h  gumthumbreader.c  gumthumbreader.h  gumthumbrelocator.c  gumthumbrelocator.h  gumthumbwriter.c  gumthumbwriter.h
gum/arch-arm64/: gumarm64.h  gumarm64backtracer.c  gumarm64backtracer.h  gumarm64reader.c  gumarm64reader.h  gumarm64relocator.c  gumarm64relocator.h  gumarm64writer.c  gumarm64writer.h
gum/arch-mips/: gummipsbacktracer.c  gummipsbacktracer.h  gummipsreader.c  gummipsreader.h  gummipsrelocator.c  gummipsrelocator.h  gummipswriter.c  gummipswriter.h
gum/arch-riscv/: gumriscvbacktracer.c  gumriscvbacktracer.h  gumriscvreader.c  gumriscvreader.h  gumriscvrelocator.c  gumriscvrelocator.h  gumriscvwriter.c  gumriscvwriter.h
gum/arch-x86/: gumcodereader.c  gumcodereader.h  gumcodewriter.c  gumcodewriter.h  gumfunctionparser.c  gumfunctionparser.h  gumrelocator.c  gumrelocator.h  gumudis86.c  gumudis86.h  gumx86backtracer.c  gumx86backtracer.h  gumx86functionparser.c  gumx86functionparser.h  gumx86reader.c  gumx86reader.h  gumx86relocator.c  gumx86relocator.h  gumx86writer.c  gumx86writer.h
gum/backend-arm/: gumclosure-arm.c  gumcpucontext-arm.c  guminterceptor-arm.c  gumprocess-arm.c  gumscriptcompiler-arm.c  gumspinlock-arm.c  gumstalker-arm-glue.S  gumstalker-arm.c
gum/backend-arm64/: asmdefs.h  gumcpucontext-arm64.c  guminterceptor-arm64-glue.S  guminterceptor-arm64.c  gumprocess-arm64-glue.S  gumprocess-arm64.c  gumspinlock-arm64.c  gumstalker-arm64-glue.S  gumstalker-arm64-glue.masm  gumstalker-arm64.c  memcpy-advsimd.S
gum/backend-barebone/: gumexceptor-barebone.c  gummemory-barebone.c  gummemoryaccessmonitor-barebone.c  gummodule-barebone.c  gummoduleregistry-barebone.c  gumprocess-barebone.c  gumsymbolutil-barebone.c  gumtls-barebone.c
gum/backend-bfd/: gumsymbolutil-bfd.c
gum/backend-darwin/: VMUAddressRange.h  VMUMemory-Protocol.h  VMUSourceInfo.h  VMUSymbol.h  VMUSymbolOwner.h  VMUSymbolicator.h  exc.h  excclient.c  fridajitclient.c  fridajitclient.h  gumcodesegment-darwin.c  gumdarwin-priv.h  gumdarwin.h  gumdarwinbacktracer.c  gumdarwinbacktracer.h  gumdarwincodesegment.c  gumdarwincodesegment.h  gumdarwinmapper.c  gumdarwinmapper.h  gumdarwinmodule.c  gumdarwinmodule.h  gumdarwinmoduleresolver.c  gumdarwinmoduleresolver.h  gumdarwinsymbolicator.c  gumkernel-darwin.c  (+30 more)
tests/: Makefile.am  android_devices.rc  configure_os.rc  dummy.mm  gum-tests-android.version  gum-tests-freebsd.version  gum-tests.plist  gum-tests.vcxproj  gum-tests.vcxproj.filters  gum-tests.version  gum-tests.xcent  gumtest.c  lowlevel-helpers.c  lowlevel-helpers.h  lowlevelhelpers.c  lowlevelhelpers.h  meson.build  run-android-arm.sh  run-android-arm64.sh  run-android-x86.sh  run-android-x86_64.sh  run-android-x86_64_new.sh  run-android.sh  run-corellium.sh  run-host-linux-x86_64-target-arm.sh  run-ios.sh  run-linux-vm.sh  run-linux-x86_64.sh  run-macos.sh  run-mapper-ios.sh  run-qnx.sh  run.py  sign.sh  stalkerdummychannel.c  stalkerdummychannel.h  stylecheck.py  testutil.c  testutil.h  vm.py  wscript_build
vapi/: Makefile.am  frida-gum-1.0.vapi  frida-gum-android-1.0.vapi  frida-gum-darwin-1.0.vapi  frida-gum-elf-1.0.vapi  frida-gum-freebsd-1.0.vapi  frida-gum-heap-1.0.vapi  frida-gum-linux-1.0.vapi  frida-gum-windows-1.0.vapi  frida-gumjs-1.0.vapi  frida-gumjs-inspector-1.0.vapi  gum-1.0.vapi  gum.vapi  meson.build  v8-10.0.vapi
(+555 files in other folders)
